[gd_scene load_steps=4 format=3 uid="uid://dwl0hcfj4yqv5"]

[ext_resource type="Script" path="res://Items/item_collect.gd" id="1_k5cwk"]
[ext_resource type="Texture2D" uid="uid://dfu3q5sxvn7it" path="res://Art/spriteSeet.png" id="1_nbh7w"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gkjqg"]
radius = 12.1655

[node name="Item" type="Area2D"]
light_mask = 2
scale = Vector2(4, 4)
script = ExtResource("1_k5cwk")

[node name="boltSprite" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
rotation = -3.14159
skew = 0.349066
texture = ExtResource("1_nbh7w")
region_enabled = true
region_rect = Rect2(0, 0, 31.6188, 30.7285)

[node name="cableSprite" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
rotation = -3.14159
skew = 0.349066
texture = ExtResource("1_nbh7w")
region_enabled = true
region_rect = Rect2(64.8076, 0.146839, 27.2964, 33.9178)

[node name="screwSprite" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
rotation = -3.14159
skew = 0.349066
texture = ExtResource("1_nbh7w")
region_enabled = true
region_rect = Rect2(35.8878, -0.930165, 24.0532, 32.4313)

[node name="scrapSprite" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(1, 0)
skew = 0.349066
texture = ExtResource("1_nbh7w")
region_enabled = true
region_rect = Rect2(95.7515, 0.689365, 33.3772, 32.2962)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gkjqg")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
